# RBOT

./: CMakeLists.txt  README.md
src/: main.cpp  model.cpp  model.h  normals_fragment_shader.glsl  normals_vertex_shader.glsl  object3d.cpp  object3d.h  optimization_engine.cpp  optimization_engine.h  phongblinn_fragment_shader.glsl  phongblinn_vertex_shader.glsl  pose_estimator6d.cpp  pose_estimator6d.h  rendering_engine.cpp  rendering_engine.h  signed_distance_transform2d.cpp  signed_distance_transform2d.h  silhouette_fragment_shader.glsl  silhouette_vertex_shader.glsl  tclc_histograms.cpp  tclc_histograms.h  template_view.cpp  template_view.h  transformations.cpp  transformations.h
