CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

SET(PROJECTNAME RBOT)
PROJECT(${PROJECTNAME})

SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(OpenCV_STATIC OFF)


SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	"${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

FILE(GLOB SOURCES src/*.cpp src/*.h src/*.hpp src/*.glsl)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(ASSIMP REQUIRED)

SET(LIBRARIES 
	Qt5::Widgets 
	Qt5::OpenGL
	${OpenCV_LIBS}
	${OPENGL_LIBRARIES}
	${ASSIMP_LIBRARIES}
)


INCLUDE_DIRECTORIES(
	${OpenCV_INCLUDE_DIRS} 
	${OPENGL_INCLUDE_DIR}
	${ASSIMP_INCLUDE_DIR}
)


ADD_EXECUTABLE(${PROJECTNAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
